--- a/project/scss/_media.scss
+++ b/project/scss/_media.scss
@@ -3,48 +3,58 @@
 
 /*==========  Desktop First  ==========*/
 
-// // ≥1200px
-// @include media-breakpoint-down(lg) {
+// ≥1200px
+@include media-breakpoint-down(lg) {
 	
-// }
+}
 
-// // ≥992px
-// @include media-breakpoint-down(md) {
+// ≥992px
+@include media-breakpoint-down(md) {
 	
-// }
+}
 
-// // ≥768px
-// @include media-breakpoint-down(sm) {
+// ≥768px
+@include media-breakpoint-down(sm) {
 
-// }
+}
 
-// // ≥576px
-// @include media-breakpoint-down(xs) {
+// ≥576px
+@include media-breakpoint-down(xs) {
+			.flexible-image{
+			display:block;
+			max-width: 768px;
+			width:80%;
+			margin: 0 auto;
+		}	
+}
 
-// }
 
+/*==========  Mobile First  ==========*/
 
-// /*==========  Mobile First  ==========*/
+// ≤576px
+@include media-breakpoint-up(sm) {
+		.flexible-image{
+			display:block;
+			max-width: 768px;
+			width:80%;
+			margin: 0 auto;
+		}	
+}
 
-// // ≤576px
-// @include media-breakpoint-up(sm) {
- 					
-// }
+// ≤768px
+@include media-breakpoint-up(md) {
 
-// // ≤768px
-// @include media-breakpoint-up(md) {
+}
 
-// }
+// ≤992px
+@include media-breakpoint-up(lg) {
 
-// // ≤992px
-// @include media-breakpoint-up(lg) {
+}
 
-// }
-
-// // ≤1200px
-// @include media-breakpoint-up(xl) {
-
-// }
+// ≤1200px
+@include media-breakpoint-up(xl) {
+		
+}
 
 @media (max-width: 1920px){
 		.box{
