--- a/project/scss/main.scss
+++ b/project/scss/main.scss
@@ -105,8 +105,7 @@ body{
 				max-width:100%;
 			}
 			ul{
-			 				margin-left: 0!important;
-			 			}
+			 				padding-left: 0;			 			}
 			h2{
 				width:75%;
 				margin: 0 auto;
@@ -209,7 +208,6 @@ body{
 
 
 	.contact-text{
-		min-width:1000px;
 		h2{
 		width: 15%;
 		margin: 0 auto;
